This is the third commit. I added Font-Awesome to the project to add fonts for the music player and other places to be added later. I also created a music player for the #sectionOne area with play, pause,stop buttons and progress bar for the length of the video and music.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hexDesign",
+  "name": "New Nomad Mystic",
   "version": "1.0.0",
   "description": "This is going to be where I experimant with SVG and Javascript ",
   "scripts": {
